--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/autoentrepreneur
 spring.datasource.username= postgres
-spring.datasource.password=postgresql
+spring.datasource.password=p0stgr3!
 spring.sql.init.platform=postgres
 
 spring.jpa.hibernate.ddl-auto= update
