--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.password=postgresql
 spring.sql.init.platform=postgres
 
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 
 server.port=8080
